[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Terrain.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Decorations.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/Audio/background.wav" type="AudioStream" id=5]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Platforms.tscn" type="PackedScene" id=7]
[ext_resource path="res://Resources/Audio/death.mp3" type="AudioStream" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 44, 44, 0, 0, 0, 0, 532, 44, 0, 0, 0, 0, 532, 212 )
}

[node name="Level" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 6 )

[node name="BallTimer" type="Timer" parent="."]
autostart = true

[node name="SurvivedTimer" type="Timer" parent="."]
autostart = true

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="BallPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="BallSpawn" type="PathFollow2D" parent="BallPath"]
position = Vector2( 44, 44 )

[node name="Player" type="Control" parent="."]
margin_left = 288.0
margin_top = 144.0
margin_right = 288.0
margin_bottom = 144.0

[node name="Player" parent="Player" instance=ExtResource( 1 )]
position = Vector2( 1, 65 )
z_index = 2

[node name="Tilemaps" type="Control" parent="."]
margin_left = 288.0
margin_top = 144.0
margin_right = 288.0
margin_bottom = 144.0

[node name="Terrain" parent="Tilemaps" instance=ExtResource( 2 )]
position = Vector2( -288, -144 )
tile_data = PoolIntArray( -131074, 8, 0, -131073, 8, 0, -196608, 8, 0, -196607, 8, 0, -196606, 8, 0, -196605, 8, 0, -196604, 8, 0, -196603, 8, 0, -196602, 8, 0, -196601, 8, 0, -196600, 8, 0, -196599, 8, 0, -196598, 8, 0, -196597, 8, 0, -196596, 8, 0, -65538, 8, 0, -2, 8, 0, 65533, 17, 196623, 65534, 17, 262145, 65535, 17, 262145, 0, 17, 196620, 1, 17, 262145, 2, 17, 262145, 3, 17, 262145, 4, 17, 262145, 5, 17, 262145, 6, 17, 262145, 7, 17, 262145, 8, 17, 262145, 9, 17, 262145, 10, 17, 262145, 11, 17, 262145, 12, 17, 262145, 13, 17, 262145, 14, 17, 262145, 15, 17, 262145, 16, 17, 262145, 17, 17, 196620, 18, 17, 262145, 19, 17, 262145, 20, 17, 196624, 131069, 17, 65540, 131070, 16, 0, 131071, 16, 2, 65536, 17, 65540, 65537, 16, 0, 65538, 16, 1, 65539, 16, 1, 65540, 16, 1, 65541, 16, 1, 65542, 16, 1, 65543, 16, 1, 65544, 16, 1, 65545, 16, 1, 65546, 16, 1, 65547, 16, 1, 65548, 16, 1, 65549, 16, 1, 65550, 16, 1, 65551, 16, 1, 65552, 16, 2, 65553, 17, 65540, 65554, 16, 0, 65555, 16, 2, 65556, 17, 65540, 196605, 17, 65540, 196606, 16, 65536, 196607, 16, 65538, 131072, 17, 65540, 131073, 16, 65536, 131074, 16, 65537, 131075, 16, 65537, 131076, 16, 65537, 131077, 16, 65537, 131078, 16, 65537, 131079, 16, 65537, 131080, 16, 65537, 131081, 16, 65537, 131082, 16, 65537, 131083, 16, 65537, 131084, 16, 65537, 131085, 16, 65537, 131086, 16, 65537, 131087, 16, 65537, 131088, 16, 65538, 131089, 17, 65540, 131090, 16, 65536, 131091, 16, 65538, 131092, 17, 65540, 262141, 17, 65540, 262142, 16, 65536, 262143, 16, 65538, 196608, 17, 65540, 196609, 16, 65536, 196610, 16, 65537, 196611, 16, 65537, 196612, 16, 65537, 196613, 16, 65537, 196614, 16, 65537, 196615, 16, 65537, 196616, 16, 65537, 196617, 16, 65537, 196618, 16, 65537, 196619, 16, 65537, 196620, 16, 65537, 196621, 16, 65537, 196622, 16, 65537, 196623, 16, 65537, 196624, 16, 65538, 196625, 17, 65540, 196626, 16, 65536, 196627, 16, 65538, 196628, 17, 65540, 327677, 17, 65540, 327678, 16, 65536, 327679, 16, 65538, 262144, 17, 65540, 262145, 16, 65536, 262146, 16, 65537, 262147, 16, 65537, 262148, 16, 65537, 262149, 16, 65537, 262150, 16, 65537, 262151, 16, 65537, 262152, 16, 65537, 262153, 16, 65537, 262154, 16, 65537, 262155, 16, 65537, 262156, 16, 65537, 262157, 16, 65537, 262158, 16, 65537, 262159, 16, 65537, 262160, 16, 65538, 262161, 17, 65540, 262162, 16, 65536, 262163, 16, 65538, 262164, 17, 65540, 393213, 17, 65540, 393214, 16, 65536, 393215, 16, 65538, 327680, 17, 65540, 327681, 16, 65536, 327682, 16, 65537, 327683, 16, 65537, 327684, 16, 65537, 327685, 16, 65537, 327686, 16, 65537, 327687, 16, 65537, 327688, 16, 65537, 327689, 16, 65537, 327690, 16, 65537, 327691, 16, 65537, 327692, 16, 65537, 327693, 16, 65537, 327694, 16, 65537, 327695, 16, 65537, 327696, 16, 65538, 327697, 17, 65540, 327698, 16, 65536, 327699, 16, 65538, 327700, 17, 65540, 458749, 17, 65540, 458750, 16, 65536, 458751, 16, 65538, 393216, 17, 65540, 393217, 16, 131072, 393218, 16, 131073, 393219, 16, 131073, 393220, 16, 131073, 393221, 16, 131073, 393222, 16, 131073, 393223, 16, 131073, 393224, 16, 131073, 393225, 16, 131073, 393226, 16, 131073, 393227, 16, 131073, 393228, 16, 131073, 393229, 16, 131073, 393230, 16, 131073, 393231, 16, 131073, 393232, 16, 131074, 393233, 17, 65540, 393234, 16, 65536, 393235, 16, 65538, 393236, 17, 65540, 524285, 17, 65540, 524286, 16, 131072, 524287, 16, 131074, 458752, 17, 262153, 458753, 17, 1, 458754, 17, 1, 458755, 17, 1, 458756, 17, 1, 458757, 17, 1, 458758, 17, 1, 458759, 17, 1, 458760, 17, 1, 458761, 17, 1, 458762, 17, 1, 458763, 17, 1, 458764, 17, 1, 458765, 17, 1, 458766, 17, 1, 458767, 17, 1, 458768, 17, 1, 458769, 17, 262154, 458770, 16, 131072, 458771, 16, 131074, 458772, 17, 65540, 589821, 17, 262159, 589822, 17, 262145, 589823, 17, 262145, 524288, 17, 262151, 524289, 17, 131073, 524290, 17, 131073, 524291, 17, 131073, 524292, 17, 131073, 524293, 17, 131073, 524294, 17, 131073, 524295, 17, 131073, 524296, 17, 131073, 524297, 17, 131073, 524298, 17, 131073, 524299, 17, 131073, 524300, 17, 131073, 524301, 17, 131073, 524302, 17, 131073, 524303, 17, 131073, 524304, 17, 131073, 524305, 17, 262150, 524306, 17, 262145, 524307, 17, 262145, 524308, 17, 262160, 655358, 8, 0, 720894, 8, 0, 786430, 8, 0, 851966, 8, 0, 917502, 8, 0, 983038, 8, 0, 1048574, 8, 0, 1114110, 8, 0, 1179646, 8, 0, 1245182, 8, 0, 1310718, 8, 0, 1376254, 8, 0, 1441790, 8, 0, 1507326, 8, 0 )

[node name="Platforms" parent="Tilemaps" instance=ExtResource( 7 )]
position = Vector2( -320, -144 )
z_index = 1
tile_data = PoolIntArray( 131076, 536870915, 0, 131080, 536870915, 0, 131083, 536870915, 0, 131087, 536870915, 0, 196610, 536870912, 0, 196614, 536870915, 0, 196621, 536870915, 0, 196625, 536870914, 0, 262148, 536870914, 0, 262149, 536870912, 0, 262153, 0, 0, 262154, 2, 0, 262158, 536870914, 0, 262159, 536870912, 0, 327687, 3, 0, 327692, 3, 0, 393219, 3, 0, 393221, 3, 0, 393224, 536870915, 0, 393227, 536870915, 0, 393230, 3, 0, 393232, 3, 0 )

[node name="Decorations" parent="Tilemaps" instance=ExtResource( 3 )]
cell_size = Vector2( 2, 2 )
cell_quadrant_size = 8
tile_data = PoolIntArray( -3604590, 0, 0, -3669922, 536870912, 0, -3145760, 9, 0, -3080281, 536870920, 0, -3145706, 536870920, 0, -2556014, 1, 0, -2555974, 4, 0, -2555958, 5, 0, -2621402, 536870917, 0, -2621386, 536870916, 0, -2621346, 536870913, 0, -2097277, 536870921, 0, -2162637, 9, 0, -2162610, 9, 0, -2097041, 8, 0, -1507438, 1, 0, -1507398, 7, 0, -1507382, 6, 0, -1572826, 536870918, 0, -1572810, 536870919, 0, -1572785, 8, 0, -1572770, 536870913, 0, -1048594, 536870921, 0, -983136, 8, 0, -983126, 8, 0, -983042, 536870920, 0, -1048568, 536870920, 0, -1048497, 8, 0, -852012, 8, 0, -458862, 3, 0, -524194, 536870914, 0, -393260, 8, 0, 65492, 8, 0, 36, 8, 0, 655252, 8, 0, 917493, 10, 0, 1048500, 9, 0, 983104, 536870921, 0, 1113999, 536870920, 0, 1114009, 536870920, 0, 1048678, 8, 0, 1638447, 536870920, 0, 2097031, 536870921, 0, 2097042, 536870921, 0, 2097053, 536870921, 0, 2097193, 536870920, 0, 2097203, 536870920, 0 )

[node name="backgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="deathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0

[connection signal="timeout" from="BallTimer" to="." method="_on_BallTimer_timeout"]
[connection signal="timeout" from="SurvivedTimer" to="." method="_on_SurvivedTimer_timeout"]
[connection signal="tree_exiting" from="Player/Player" to="." method="_on_Player_tree_exiting"]
[connection signal="tree_exiting" from="Player/Player" to="HUD" method="_on_Player_tree_exiting"]
